plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

repositories {
    mavenCentral()
}

dependencies {
    //other
    implementation 'com.microsoft.sqlserver:mssql-jdbc:12.10.0.jre11'
    implementation 'com.konghq:unirest-java-core:4.4.6'
    implementation 'com.konghq:unirest-objectmapper-jackson:4.2.9'
    implementation 'com.nimbusds:nimbus-jose-jwt:10.2'
    implementation 'org.projectlombok:lombok:1.18.38'
    annotationProcessor 'org.projectlombok:lombok:1.18.38'

    //spring
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

    //test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaExec).configureEach {
    jvmArgs = ['-Djava.library.path=libs']
}

bootRun {
    jvmArgs = ['-Djava.library.path=libs']
}

group = 'gr.jimmys'
version = '0.0.1-SNAPSHOT'
description = 'JimmysFoodzilla'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
}
